<resources>
    <string name="app_name">MyCaffe</string>
    <string name="choose_your_favourite_coffee">Choose your \nfavourite coffee!</string>
    <string name="izaberite_svoju_najdra_u_kavu">Izaberite svoju \nnajdražu kavu!</string>
    <string name="zapo_nite">Započnite</string>
    <string name="splashimage">SplashImage</string>
    <string name="ime_prezime">Ime Prezime</string>
    <string name="profile_picture">Profile picture</string>
    <string name="notification_button">Notification button</string>
    <string name="notification_btn">notification btn</string>
    <string name="settings_btn">Settings btn</string>
    <string name="pretra_ite">Pretražite...</string>
    <string name="kategorija">Kategorija</string>
    <string name="popularno">Popularno</string>
    <string name="popularne_kave">Popularne kave</string>
    <string name="vidi_sve">Vidi sve</string>
    <string name="pretra_iva">Pretraživač</string>
    <string name="ko_arica">Košarica</string>
    <string name="omiljeni">Omiljeni</string>
    <string name="narud_be">Narudžbe</string>
    <string name="profil">Profil</string>
    <string name="profilebtn">profilebtn</string>
    <string name="ordersbtn">ordersbtn</string>
    <string name="favouritesbtn">favouritesbtn</string>
    <string name="cart_btn">cart_btn</string>
    <string name="homepage_btn">homepage_btn</string>
    <string name="title">title</string>
    <string name="text">text</string>
    <string name="back">Back</string>
    <string name="natrag">Natrag</string>
    <string name="popis">Popis</string>
    <string name="arrow_back">arrow_back</string>
    <string name="naslov">Naslov</string>
    <string name="velicina_kave">Velicina kave</string>
    <string name="srednja">Srednja</string>
    <string name="koli_ina">Količina</string>
    <string name="opis">Opis</string>
    <string name="dodaj_u_ko_aricu">Dodaj u košaricu</string>
    <string name="backbutton">backButton</string>
    <string name="me_uzbroj">Međuzbroj</string>
    <string name="dostava">Dostava</string>
    <string name="ukupno">Ukupno</string>
    <string name="ukupno_porez" />
    <string name="nastavi_na_pla_anje">Nastavi na plaćanje</string>
    <string name="primjeni">Primjeni</string>
    <string name="unesite_kod_za_popust">Unesite kod za popust</string>
</resources>